--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <meta name="description" content="Insert Your Site Description" /> 
 
-<!-- Mobile Specifics -->
+<!-- Mobile Specifics Test-->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="HandheldFriendly" content="true"/>
 <meta name="MobileOptimized" content="320"/>   
